BUG: fix letter spacing on h2

--- a/be/proj/static/css/base.scss
+++ b/be/proj/static/css/base.scss
@@ -344,7 +344,7 @@ h2 {
   line-height: 30px;
   text-align: center;
   margin-bottom: 22px;
-  letter-spacing: 4.5px;
+  letter-spacing: 2px;
   &.dark {
     color: $dark-background-color;
   }
